# shop_list

./: .gitignore  Makefile  README.md  config.py  main.py  mypy.ini  pyproject.toml  settings.json
src/shop_list/models/: db.py  qeuries.sql  sql_utils.py
src/shop_list/utils/: theme_utils.py
src/shop_list/views/: ui.kv
tests/: test_db.py  test_sql_utils.py  test_theme_utils.py
