[project]
name = "shop-list"
version = "0.1.0"
description = ""
authors = [
    {name = "black40",email = "black40@i.ua"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)",
    "kivymd (>=1.2.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "shop_list", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv"
]

[tool.ruff.format]
quote-style = "single"